# media_agent

./: .gitignore  .gitmodules  Cargo.toml  README.md  README_CN.md
config/: agent.yaml  backend.yaml  config.json  models.yaml
docs/: GLIDING_HORSE_ADVANCED_FEATURES.md
prompts/aa/: system.md
schemas/: aa_output.json  ca_output.json  da_output.json  pa_output.json
scripts/: run_real_e2e_tests.sh  run_tests.sh  start_all.sh  start_llama_server.sh
skills/: comfyui_ontology.jsonld  generate_video.jsonld  image_to_image.jsonld  inpaint.jsonld  text_to_image.jsonld  upscale.jsonld
src/: lib.rs  types.rs
tests/: agent_e2e_test.rs  agent_real_e2e_test.rs  agent_unit_test.rs  comprehensive_e2e_test.rs  e2e_video_generation_test.rs  execution_test.rs  full_coverage_test.rs  image_generation_e2e_test.rs  integration_generation.rs  integration_test.rs  mega_integration_test.rs  sd_generation_test.rs  video_comprehensive_test.rs  video_workflow_test.rs  workflow_complete_e2e_test.rs  workflow_test.rs
web/: app.js  index.html  style.css
workflows/: agent_intelligent_workflow.jsonld  agent_pdca_workflow.jsonld  batch_generate.jsonld  batch_generation.jsonld  controlnet_animated_video.jsonld  controlnet_depth.jsonld  controlnet_lineart.jsonld  controlnet_pose.jsonld  face_restore.jsonld  generate_and_review.jsonld  high_quality_generation.jsonld  image_to_image.jsonld  image_to_video_svd.jsonld  inpainting.jsonld  latent_interpolation.jsonld  lora_detail_enhance.jsonld  lora_style.jsonld  multi_lora_combine.jsonld  multi_prompt_video_morph.jsonld  multi_stage_pipeline.jsonld  sdxl_text_to_image.jsonld  style_aware_video.jsonld  style_transfer.jsonld  text_to_image_basic.jsonld  text_to_video_direct.jsonld  upscale_image.jsonld  (+3 more)
(+57 files in other folders)
